<resources>
    <string name="app_name">Sward App</string>
    <string name="title_activity_launcher">SWARD APP</string>
    <string name="app_title">MULTI-SPECIES SWARD APP</string>
    <string name="app_strap">Support for identifying and monitoring your sward species. Click on the menu to start.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="duchy_email">nebogeo@gmail.com</string>
    <string name="title_activity_farm">MY FARM</string>
    <string name="farm_new_field">Add new field</string>
    <string name="farm_fields">Your fields</string>
    <string name="no_fields">No fields yet.</string>
    <string name="farm_download_data">Download data</string>
    <string name="field_date_sown">Date sown</string>
    <string name="field_soil_type">Soil type</string>
    <string name="field_notes">Notes</string>
    <string name="field_notes_hint">Add your notes about this field here…</string>
    <string-array name="soil_types">
        <item>Predominantly sandy</item>
        <item>Predominantly clay</item>
        <item>Predominantly silt</item>
        <item>Loam</item>
        <item>Organic/peat</item>
        <item>Shallow</item>
        <item>Stony</item>
        <item>Naturally wet/seasonally waterlogged</item>
    </string-array>
    <string name="title_activity_field">FIELD</string>
    <string name="field_survey">Perform survey</string>
    <string name="field_results">Detailed results</string>
    <string name="field_biodiversity">Field biodiversity</string>
    <string name="field_canvas_sown">Field sown</string>
    <string name="field_delete">Delete field</string>
    <string name="field_canvas_y_axis">Number of species in field</string>
    <string name="field_delete_title">Delete field</string>
    <string name="field_delete_body">Are you sure you want to delete this field?</string>
    <string name="field_delete_yes">Yes</string>
    <string name="field_delete_no">No</string>
    <string name="title_activity_new_field">ADD FIELD</string>
    <string name="hint_field">Field name…</string>
    <string name="field_name">Field name</string>
    <string name="button_field_save">Save</string>
    <string name="species_sown">Species sown</string>
    <string name="empty_field_not_saved">You need to give your field a name.</string>
    <string name="unsown_field_not_saved">Select some sown species for this field, or unknown if you are not sure.</string>
    <string name="unknown_species">I\'m not sure (select all)</string>
    <string name="title_activity_field_detail">FIELD DETAILS</string>
    <string name="field_detail_about">Each species listed is one that was sown. Each bar shows the number of samples out of nine in each survey that was found.</string>
    <string name="title_activity_about">ABOUT</string>
    <string name="about_text"><![CDATA[This app is a guide to grassland ley species, featuring identification keys, a sward monitoring tool and information about species\' attributes. It is part of the <a href="https://www.swarmhub.co.uk/toolbox-of-multi-species-swards-toms/">Toolbox of Multi-species Swards</a> project, funded by the <a href="https://www.agritechcornwall.co.uk/">Agri-tech Cornwall and Isles of Scilly Project</a>, led by <a href="https://www.ruralbusinessschool.org.uk/">Duchy College Rural Business School<a/> and <a href="https://www.rothamsted.ac.uk/north-wyke-farm-platform">Rothamsted Research North Wyke</a>. The contribution of farmers, collaborating business partners, and other experts is gratefully acknowledged. All photos taken by Bethan Stagg except where stated otherwise.]]></string>
    <string name="about_2">Agri-tech Cornwall &amp; the Isles of Scilly is a £11.8m project to increase Research Development and Innovation in the Agri-tech sector across Cornwall and the Isles of Scilly. Running to June 2021, it is part-funded by the European Regional Development Fund, Cornwall Council and the Council for the Isles of Scilly</string>
    <string name="about_3"><![CDATA[The Sward App is designed and built in Cornwall by <a href="http://fo.am/kernow">FoAM Kernow</a>, and released as <a href="https://github.com/fo-am/sward-android-app/">Free/Open Source Software</a> published under GPL and Creative Commons Licenses.]]></string>
    <string name="title_activity_identification">ID KEY</string>
    <string name="action_farm">My Farm</string>
    <string name="action_species">Species Info</string>
    <string name="action_identification">ID Key</string>
    <string name="action_survey">Survey</string>
    <string name="action_about">About</string>
    <string name="title_activity_survey">SURVEY</string>
    <string name="survey_field">Which field would you like to survey?</string>
    <string name="survey_howto_1">To complete your field survey you need to walk through your field in a \'W\' shape, stopping at 9 points.</string>
    <string name="survey_howto_2">At each point, complete a sample survey by recording all the species you can see within a 1m radius of where you are standing.</string>
    <string name="survey_howto_3">Surveys can be completed between March and October. If you only have time for one annual survey, this should be done between May and July.</string>
    <string name="survey_example_field">Example field</string>
    <string name="survey_date">Survey date</string>
    <string name="survey_image_desc">Diagram showing a W shaped path through a field.</string>
    <string name="survey_start">Start survey</string>
    <string name="survey_main_plural">You have %d samples to do. Work through the survey until the list is complete.</string>
    <string name="survey_main_single">You have %d sample to do. Work through the survey until the list is complete.</string>
    <string name="survey_sample_button">Do sample %d</string>
    <string name="survey_sample">Tap to select the species you can see within 1m of where you are standing.</string>
    <string name="survey_end">Survey complete!</string>
    <string name="survey_view_button">View field results</string>
    <string name="title_activity_download">DOWNLOAD YOUR DATA</string>
    <string name="download_text">Enter an email address to send all data on your farm to yourself or someone else."</string>
    <string name="download_address">Email address</string>
    <string name="download_consent">I consent to sharing my farm data for research</string>
    <string name="download_send">Send data</string>
    <string name="download_citsci">Researchers at Duchy College are interested in your data to understand how multispecies swards perform. Tick this box if you are happy to automatically send them your data for research purposes only.</string>
    <string name="download_data"><![CDATA[Information on this form will not be used for any other purpose, apart from research. If you would like your personal data removed in the future, please contact rbs@duchy.ac.uk. Duchy College is part of TCCG. For our privacy notice <a href="https://www.cornwall.ac.uk/wp-content/uploads/2020/02/TCCG-Privacy-Notice-Commercial-Supplier-Organisation-v1.pdf">click here</a>.]]></string>
    <string name="export_subject">Your farm data from the Sward app</string>
    <string name="export_body">Your farm data is attached in a csv spreadsheet, which you can open in excel or open office.</string>
    <string name="permission_fail">The app was not allowed to write in your storage</string>
    <string name="id_first_text">Would you like to ID a grass or a legume?</string>
    <string name="id_first_one">Grass</string>
    <string name="id_first_two">Legume</string>
    <string name="id_legume_leaves_text">What are the leaves like?</string>
    <string name="id_legume_leaves_one">There are three leaflets</string>
    <string name="id_legume_leaves_two">There are five leaflets (2 clasp on the stem)</string>
    <string name="id_legume_leaves_three">There are many leaflets</string>
    <string name="id_legume_leaflet_text">What is the leaflet on the end like?</string>
    <string name="id_legume_leaflet_one">The leaflet on the end has no "stalk"</string>
    <string name="id_legume_leaflet_two">The leaflet on the end has a "stalk"</string>
    <string name="id_legume_hairy_text">Are the leaves hairy? Try stroking the underside with your finger.</string>
    <string name="id_legume_hairy_one">Leaf is hairless, it feels smooth.</string>
    <string name="id_legume_hairy_two">Leaf is hairy, it feels rough.</string>
    <string name="id_legume_stolons_text">Is the plant upright, or creeping along the ground? Does it have stolons (horizontal stems with roots along their length)? Try following a flowering stem to the soil with your fingers and gently pull it up.</string>
    <string name="id_legume_stolons_one">Plant is upright (no stolons).</string>
    <string name="id_legume_stolons_two">Plant is creeping. There are roots along the uprooted stem (stolons).</string>
    <string name="id_legume_stolons_three">I am not sure (the next question will use less reliable features).</string>
    <string name="id_legume_crescent_text">Do the leaves have crescent shaped marks?</string>
    <string name="id_legume_crescent_one">Some leaves have crescent marks.</string>
    <string name="id_legume_crescent_two">No leaves have crescent marks.</string>
    <string name="id_legume_flower_text">If there are flowers, what colour are they?</string>
    <string name="id_legume_flower_one">Pink, or no flowers.</string>
    <string name="id_legume_flower_two">White.</string>
    <string name="id_legume_flower_three">No flowers.</string>
    <string name="id_grass_auricle_text">Look at the place where the leaf joins the stem.</string>
    <string name="id_grass_auricle_text2">Can you see tiny flaps (called auricles) at the leaf base?</string>
    <string name="id_grass_auricle_one">There are auricles</string>
    <string name="id_grass_auricle_two">There are no auricles</string>
    <string name="id_grass_auricle2_text">Look closely at the auricles - what can you see?</string>
    <string name="id_grass_auricle2_one">There are tiny hairs on the auricles</string>
    <string name="id_grass_auricle2_two">The auricles are short (1mm or less)</string>
    <string name="id_grass_auricle2_three">The auricles are long (2mm or more)</string>
    <string name="id_grass_stem_text">Cut across the stem - what shape is it?</string>
    <string name="id_grass_stem_one">The stem is round</string>
    <string name="id_grass_stem_two">The stem is flattened</string>
    <string name="id_grass_ligule_text">Look at the place where the leaf joins the stem and find the skin-like flap - this is called the \'ligule\'. What does it look like?</string>
    <string name="id_grass_ligule_one">Ligule has a pointed tip</string>
    <string name="id_grass_ligule_two">Ligule has a flat, ragged top.</string>
    <string name="title_species">SPECIES INFO</string>
    <string name="species_text">Discover special traits and features of common sward species.</string>
    <string name="id_results_this_is">This is </string>
    <string name="id_results_species_info">Go to species info</string>
    <string name="id_results_id_again">ID another plant</string>
    <string name="title_activity_species_info">SPECIES INFO</string>
    <string name="swipable_text">Swipe left and right to see more images.</string>
    <string name="trait_list_title">Species traits</string>
    <string name="trait_list_title_grass">Grass traits</string>
    <string name="trait_list_title_legume">Legume traits</string>
    <string name="trait_list_title_herb">Herb traits</string>
    <string name="trait_list_blurb"><![CDATA[Click on each of the traits below for more information. <a href="https://www.swarmhub.co.uk/wp-content/uploads/2018/09/Multi-species-Sward.pdf">Visit this page for references</a>.]]></string>
</resources>