<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".survey_fragments.SurveyHowtoFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_howto_1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_howto_2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_howto_3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/survey_image_desc"
        android:src="@drawable/example_w" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <Button
        android:id="@+id/start_survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_start" />

</LinearLayout>