<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".id_fragments.IdLegumeLeavesFragment">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_legume_leaves_text"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <Button
        android:id="@+id/one"
        style="@style/SwardImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/legume_leaflets_3"
        android:text="@string/id_legume_leaves_one" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <Button
        android:id="@+id/two"
        style="@style/SwardImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/legume_leaflets_5"
        android:text="@string/id_legume_leaves_two" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <Button
        android:id="@+id/three"
        style="@style/SwardImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/legume_leaflets_many"
        android:text="@string/id_legume_leaves_three" />


</LinearLayout>